--- a/tutorial_TeX/RB_Partition_Tutorial/RB_Partition_Tutorial_content.tex
+++ b/tutorial_TeX/RB_Partition_Tutorial/RB_Partition_Tutorial_content.tex
@@ -1,3 +1,9 @@
+\bigskip
+\begin{center}
+\textbf{\Large \color{red}This tutorial is currently under construction/revision.}
+\end{center}
+\bigskip
+
 \section{Overview}
 
 
