--- a/tutorial_TeX/RB_MCMC_Tutorial/RB_MCMC_Tutorial.tex
+++ b/tutorial_TeX/RB_MCMC_Tutorial/RB_MCMC_Tutorial.tex
@@ -5,21 +5,21 @@
 \renewcommand{\headrulewidth}{0.5pt}
 \headsep = 20pt
 \lhead{ }
-\rhead{\textsc {\RevBayes~Tutorial --- Substitution Models}}
+\rhead{\textsc {\RevBayes~Tutorial --- MCMC algorithms}}
 
 \thispagestyle{plain}
 \begin{center}
 
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
-\textbf{\it{\Large Substitution Models}}\\\vspace{2mm}
+\textbf{\it{\Large MCMC algorithms}}\\\vspace{2mm}
 \vspace{1cm}
-{\Large Sebastian H{\"o}hna and }
+{\Large Sebastian H{\"o}hna, Mike R. May and Brian R. Moore }
 \vspace{1cm}
 \end{center}
 
 \def \ResourcePath {./}
 \def \GlobalResourcePath {../}
-\input{RB_CTMC_Tutorial_content}
+\input{RB_MCMC_Tutorial_content}
 
 Version dated: \today
 
